1/ Increase wda timeout (5 min) 2/ Run all testcases