@@ -9,42 +9,18 @@ import org.openqa.selenium.remote.DesiredCapabilities;
 import utilities.commons.UICommonAndroid;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import static utilities.environment.goSELLEREnvironment.goSELLERBundleId;
 
 
 public class InitAndroidDriver {
-    Logger logger = LogManager.getLogger();
     String url = "http://127.0.0.1:%s/wd/hub".formatted(System.getProperty("appiumPort"));
 
-    /**
-     * This method returns an instance of the AppiumDriver class. It takes in the following parameters:
-     *
-     * @param udid The UDID of the device
-     * @return AppiumDriver returns an instance of the AppiumDriver class (AndroidDriver or IOSDriver)
-     * @throws MalformedURLException    throws a MalformedURLException if the URL for the Appium server is malformed
-     * @throws IllegalArgumentException throws an IllegalArgumentException if the platform name is not recognized
-     */
-    public AndroidDriver getAndroidDriver(String udid) throws MalformedURLException {
-        DesiredCapabilities capabilities = new DesiredCapabilities();
-        capabilities.setCapability("udid", udid);
-        capabilities.setCapability("platformName", "ANDROID");
-        capabilities.setCapability("newCommandTimeout", 300000);
-        capabilities.setCapability("noReset", "false");
-        capabilities.setCapability("fastReset", "true");
-        capabilities.setCapability("resetOnSessionStartOnly", "true");
-        capabilities.setCapability("autoGrantPermissions", "true");
-        capabilities.setCapability("automationName", "UIAutomator2");
-        // Fix startActivity issue
-        capabilities.setCapability("appWaitActivity", "*");
-        capabilities.setCapability("appWaitForLaunch", "false");
-        return new AndroidDriver(new URL(url), capabilities);
-    }
 
-
-    public AndroidDriver getAndroidDriver(String udid, String appPath) throws MalformedURLException {
-        logger.info("Appium port: {}", System.getProperty("appiumPort"));
+    public AndroidDriver getAndroidDriver(String udid, String appPath) throws MalformedURLException, URISyntaxException {
         UiAutomator2Options options = new UiAutomator2Options();
         options.setUdid(udid);
         options.setCapability("platformName", "Android");
@@ -58,19 +34,21 @@ public class InitAndroidDriver {
         options.setCapability("appium:noReset", "false");
         options.setCapability("appium:newCommandTimeout", "30000");
         options.setCapability("appium:app", appPath);
-        return new AndroidDriver(new URL(url), options);
+        return new AndroidDriver(new URI(url).toURL(), options);
     }
 
 
-    public AndroidDriver getSellerDriver(String udid) throws MalformedURLException {
-        AndroidDriver driver = getAndroidDriver(udid, System.getProperty("user.dir") + "/src/main/resources/app/GoSELLER STAG.apk");
+    public AndroidDriver getSellerDriver(String udid) throws MalformedURLException, URISyntaxException {
+        AndroidDriver driver = getAndroidDriver(udid, System.getProperty("user.dir") + "/src/main/resources/app/GoSELLER_STAG.apk");
         new UICommonAndroid(driver).relaunchApp(goSELLERBundleId);
         return driver;
     }
 
     @SneakyThrows
     public AndroidDriver getBuyerDriver(String udid, String goBuyerBundleId) {
-        return getAndroidDriver(udid, goBuyerBundleId);
+        AndroidDriver driver = getAndroidDriver(udid, System.getProperty("user.dir") + "/src/main/resources/app/GoBUYER_STAG.apk");
+        new UICommonAndroid(driver).relaunchApp(goBuyerBundleId);
+        return driver;
     }
 
 }
