@@ -2,30 +2,17 @@ package utilities.driver;
 
 import io.appium.java_client.ios.IOSDriver;
 import io.appium.java_client.ios.options.XCUITestOptions;
-import lombok.SneakyThrows;
-import org.apache.logging.log4j.LogManager;
-import org.openqa.selenium.remote.DesiredCapabilities;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import static utilities.environment.goSELLEREnvironment.goSELLERBundleId;
 
 public class InitIOSDriver {
     String url = "http://127.0.0.1:%s/wd/hub".formatted(System.getProperty("appiumPort"));
 
-    public IOSDriver getIOSDriver(String udid) throws MalformedURLException {
-        LogManager.getLogger().info("Appium port: {}", System.getProperty("appiumPort"));
-        DesiredCapabilities capabilities = new DesiredCapabilities();
-        capabilities.setCapability("udid", udid);
-        capabilities.setCapability("platformName", "iOS");
-        capabilities.setCapability("newCommandTimeout", 300000);
-        capabilities.setCapability("wdaStartupRetries", 5);
-        capabilities.setCapability("automationName", "XCUITest");
-        return new IOSDriver(new URL(url), capabilities);
-    }
-
-    public IOSDriver getIOSDriver(String udid, String appPath) throws MalformedURLException {
+    public IOSDriver getIOSDriver(String udid, String appPath) throws MalformedURLException, URISyntaxException {
         XCUITestOptions options = new XCUITestOptions();
         options.setCapability("appium:udid", udid);
         options.setCapability("platformName", "iOS");
@@ -34,14 +21,14 @@ public class InitIOSDriver {
         options.setCapability("appium:wdaConnectionTimeout", 300000);
         options.setCapability("appium:automationName", "XCUITest");
         options.setCapability("appium:app", appPath);
-        return new IOSDriver(new URL(url), options);
+        return new IOSDriver(new URI(url).toURL(), options);
     }
 
 
     public IOSDriver getSellerDriver(String udid) {
         try {
             // Init driver
-            IOSDriver driver = getIOSDriver(udid, System.getProperty("user.dir") + "/src/main/resources/app/GoSeller STG.zip");
+            IOSDriver driver = getIOSDriver(udid, System.getProperty("user.dir") + "/src/main/resources/app/GoSELLER_STG.zip");
 
             // Open GoSeller app
             driver.terminateApp(goSELLERBundleId);
@@ -49,16 +36,15 @@ public class InitIOSDriver {
 
             // Return driver
             return driver;
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
 
-    @SneakyThrows
     public IOSDriver getBuyerDriver(String udid, String goBuyerBundleId) {
         try {
             // Init driver
-            IOSDriver driver = getIOSDriver(udid);
+            IOSDriver driver = getIOSDriver(udid, System.getProperty("user.dir") + "/src/main/resources/app/GoBUYER_STG.zip");
 
             // Open GoSeller app
             driver.terminateApp(goBuyerBundleId);
@@ -66,7 +52,7 @@ public class InitIOSDriver {
 
             // Return driver
             return driver;
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
